Add the "raw allocator" abstraction
This commit creates a new module `raw_allocator` with the `RawAllocator`
type. This allocator is a simpler version of a global allocator as it
does not need to handle alignment. Therefore the main `Allocator` uses
that new allocator to alloc/free memory slices. The main allocator also
ensures the proper alignment.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ rust-version = "1.62"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+
+[dependencies.spin]
+version = "0.9.4"
+default-features = false
+features = ["mutex", "spin_mutex"]
