--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "emballoc"
 description = "Embedded allocator for `#![no_std]`"
 version = "0.1.0"
 edition = "2021"
-categories = ["memory-management", "allocator", "no-std", "embedded"]
+categories = ["memory-management", "no-std", "embedded", "algorithms"]
 keywords = ["allocator", "embedded", "no-std", "no_std"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/jfrimmel/emballoc"
