Polish user-facing documentation
This commit improves the documentation of this crate, both the Readme
and the crate documentation itself. The following things are done:
- fixing of the crates.io-badge-link
- describe, how allocation-block-headers reduce the usable heap memory
- mention, that the heap size is bounded statically
- mention, that `N` measures the size in bytes
- go into details, how test coverage is measured including links
- give examples on `Allocator::new()`
- adopting of the crates.io description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "emballoc"
-description = "Embedded allocator for `#![no_std]`"
+description = "Simple but reliable memory allocator for embedded Rust and #![no_std]"
 version = "0.1.1"
 edition = "2021"
 categories = ["memory-management", "no-std", "embedded", "algorithms"]
