--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       target:
         type: string
     docker:
-      - image: jfrimmel/miri:nightly-2022-08-22
+      - image: jfrimmel/miri:nightly-2023-11-09
     steps:
       - checkout
       - run:
@@ -36,7 +36,7 @@ jobs:
 
   coverage:
     docker:
-      - image: jfrimmel/coverage
+      - image: jfrimmel/coverage:1.1
     steps:
       - checkout
       - run:
