--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,9 +66,15 @@ jobs:
       - image: rust:1.57
     steps:
       - checkout
+      - restore_cache:
+          key: cargo-registry
       - run:
           name: Build the source
           command: cargo check
+      - save_cache:
+          key: cargo-registry
+          paths:
+            - /usr/local/cargo/registry/
 
   style:
     docker:
