--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
 
   coverage:
     docker:
-      - image: jfrimmel/coverage:1.1
+      - image: jfrimmel/coverage:nightly-2024-09-18
     steps:
       - checkout
       - run:
